Fixed the column wrapping

--- a/phx-staff/assets/scss/pages/_about.scss
+++ b/phx-staff/assets/scss/pages/_about.scss
@@ -1,10 +1,12 @@
 /*----------------------------------------------------------------------------
   About page
 ----------------------------------------------------------------------------*/
+.about {
+  text-align: center;
+}
 .about-content {
-  :not(h2) {
-    column-count: 2;
-  }
+  text-align: left;
+  column-count: 2;
 }
 
 // In the community
